--- a/webapp/static/styles.css
+++ b/webapp/static/styles.css
@@ -7,7 +7,7 @@ body{
 	text-align: center;
 	line-height: 1.6;
 	padding: 20px;
-	border: 4px solid limegreen;
+	border: 8px solid rgb(255, 136, 0);
 	margin: 2% 10%;
 	background: lightyellow;
 }
@@ -21,15 +21,17 @@ header h1{
 }
 
 .btn-info{
-	border: 1.5px solid black;
+	border: 1.5px solid rgb(255, 0, 0);
+	background-color: grey;
 	padding: 10px 15px;
 	margin: 15px;
-	box-shadow: 0 0 4px #eee;
+	box-shadow: 0 0 4px rgb(56, 55, 55);
 	cursor: pointer;
+	
 }
 
 .btn-info:hover{
-	background-color: transparent;
+	background-color: aqua;
 	box-shadow: 0 0 10px #eee;
 }
 
@@ -40,3 +42,4 @@ header h1{
 .ml-container textarea{
 	width: 100%;
 }
+
