--- a/webapp/templates/home.html
+++ b/webapp/templates/home.html
@@ -33,8 +33,9 @@
           <textarea name="message" rows="8" cols="50"></textarea>
         </div>
         <br/>
-        <input type="submit" class="btn-info" value="Predict" />
+        <input type="submit" class="btn-info" value="Check" />
       </form>
     </div>
+    
   </body>
 </html>
